Converting to Piwik for tracking.
Piwik is installed on the webpage, so all the sections
relating to the tracking scripts have been changed.

For a week or so, I will keep both Google Analytics and
Piwik to compare the two services, then I will hopefully
totally remove Google Analytics.

--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,9 @@ doc/mockgals/
 #Products:
 doc/MakingPlots/LaTeX/Plots.pdf
 doc/MakingPlots/LaTeX/tikzext/
-doc/addscripttohtmlhead
 doc/copytowebpage.sh
 doc/correctindextop
+doc/addjavascript
 mock.fits
 mockgals
 mockinfo.txt
