Option for PSF truncation added.
Until now the PSF truncation was fixed to 5 times
the HWHM=FWHM/2 for Moffat or sigma for Gaussian.
But now, in both cases it will be based on the HWHM.
Also it can be set by the user from the outside.

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ doc/addjavascript
 mock.fits
 mockgals
 mockinfo.txt
+PSF.fits
+PSF.conv
 
 doc/MakingPlots/GIFs/IntegPixFill/s7_integpixfill.gif
 doc/MakingPlots/GIFs/RestPixFill/s7_restpixfill.gif
