GNU build system and argp.h implemented.
MockGals can now be built with the standard GNU build system. Also to
parse command line arguments, the argp.h infrastructure of glibc is
used. This commit was mainly to configure MockGals to be able to use
these systems.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,21 @@
-*.[oa]
 *~
+*.log
+*.trs
+*.[oa]
+*.fits
+Makefile
 
+#Source code:
+stamp-h1
+config.h
+config.log
+src/.deps/
+config.status
+autom4te.cache/
+src/testinfo_cat.txt
+
+
+#Documentation:
 #Output of documentation:
 doc/mockgals/
 
